[project]
name = "pdfcut"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "iceiceice", email = "597952291@qq.com"},
]
dependencies = ["fitz>=0.0.1.dev2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
